--- a/PMS412/pom.xml
+++ b/PMS412/pom.xml
@@ -24,6 +24,12 @@
       <artifactId>postgresql</artifactId>
       <version>42.5.0</version>
     </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.13.1</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -46,6 +52,14 @@
                         <mainClass>team02.Main</mainClass> <!-- Replace with your main class -->
                     </manifest>
                 </archive>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>8</source>
+                <target>8</target>
             </configuration>
         </plugin>
     </plugins>
